--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "github-calendar": "^2.3.4",
+    "image2uri": "^2.1.2",
     "lucide-react": "^0.552.0",
     "next": "^14.2.5",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.66.1",
+    "react-hook-form": "^7.67.0",
     "resend": "^6.5.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.12"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
