--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tsparticles/all": "^3.9.1",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "class-variance-authority": "^0.7.1",
@@ -30,10 +29,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.67.0",
+    "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "resend": "^6.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tsparticles-slim": "^2.12.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
