--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.8.0",
-    "@hookform/resolvers": "^5.2.2",
+    "@hookform/resolvers": "^3.3.4",
     "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
@@ -26,16 +26,17 @@
     "lucide-react": "^0.552.0",
     "next": "^14.2.5",
     "next-themes": "^0.4.6",
+    "postgres": "^3.4.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.67.0",
+    "react-hook-form": "^7.51.5",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "resend": "^6.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tsparticles-slim": "^2.12.0",
-    "zod": "^4.1.13"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
